--- a/project.yml
+++ b/project.yml
@@ -6,7 +6,7 @@ settings:
     pdf_enabled: true
   prod:
     pdf_enabled: true
-  # harmony_enabled: true
+    harmony_enabled: true
 
 sidebar: 
   entries:
