Fixed a broken step link.

--- a/project.yml
+++ b/project.yml
@@ -1,7 +1,7 @@
 settings:
   name: System Manager Classic
   internal:
-    pdf_enabled: true
+    pdf_enabled: false
   prod:
     pdf_enabled: true
     harmony_enabled: true
