--- a/project.yml
+++ b/project.yml
@@ -40,6 +40,9 @@ sidebar:
     - title: Cluster management using System Manager 9.6 and 9.7
       entries:
       - section: online-help-96-97
+    - title: Network management
+      entries:
+      - section: networking
     - title: ONTAP docs
       url: https://docs.netapp.com/us-en/ontap/
     - title: Legal Notices
