--- a/_index.yml
+++ b/_index.yml
@@ -1,6 +1,6 @@
 indexpage:
   title: ONTAP System Manager Classic documentation
-  lead: The System Manager Classic interface is available in ONTAP 9.7 and earlier ONTAP 9 releases. Documentation is available on this site for configuration workflows using System Manager Classic, as well as System Manager Classic online help for ONTAP 9.6 and 9.7.
+  lead: The System Manager interface available in ONTAP 9.7 and earlier versions is referred to as System Manager Classic, and it provides different user navigation than the System Manager interface for ONTAP 9.8 and later versions. For users of System Manager in ONTAP 9.7 and earlier versions, this doc site provides configuration workflows using System Manager Classic, as well as the System Manager Classic online help for ONTAP 9.6 and 9.7. ONTAP networking fundamentals also changed significantly beginning with ONTAP 9.8, and this doc site provides networking information that applies only to ONTAP 9.7 and earlier versions.
   summary: ONTAP System Manager is a simple and versatile product that enables you to easily configure and manage ONTAP clusters. System Manager simplifies common storage tasks such as creating volumes, LUNs, qtrees, shares, and exports, which saves time and helps prevent errors.
   keywords: ontap, netapp, documentation, system, manager
   tiles:
