--- a/networking/sidebar.yml
+++ b/networking/sidebar.yml
@@ -1,13 +1,12 @@
 section: networking
+title: NAS path failover workflow (ONTAP 9.7 and earlier)
 entries:
+    - title: About NAS path failover (ONTAP 9.7 and earlier)
+      url: "/networking/set_up_nas_path_failover_9_to_97_cli.html"
     - title: NAS path failover workflow (ONTAP 9.7 and earlier)
-      entries:
-      - title: About NAS path failover (ONTAP 9.7 and earlier)
-        url: "/networking/set_up_nas_path_failover_9_to_97_cli.html"
-      - title: NAS path failover workflow (ONTAP 9.7 and earlier)
-        url: "/networking/workflow__nas_path_failover_overview_manual.html"
-      - title: Worksheet for NAS path failover configuration (ONTAP 9.7 and earlier)
-        url: "/networking/worksheet_for_nas_path_failover_configuration_manual.html"
+      url: "/networking/workflow__nas_path_failover_overview_manual.html"
+    - title: Worksheet for NAS path failover configuration (ONTAP 9.7 and earlier)
+      url: "/networking/worksheet_for_nas_path_failover_configuration_manual.html"
     - title: Removing a NIC from the node (ONTAP 9.7 or earlier)
       url: "/networking/remove_a_nic_from_the_node_97.html"
     - title: Broadcast domains (ONTAP 9.7 or earlier)
