--- a/project.yml
+++ b/project.yml
@@ -40,8 +40,10 @@ sidebar:
     - title: Cluster management using System Manager 9.6 and 9.7
       entries:
       - section: online-help-96-97
-    - title: Network management
+    - title: Network management for ONTAP 9.7 and earlier
       entries:
+      - section: networking-failover
+      - section: networking-bd
       - section: networking
     - title: ONTAP docs
       url: https://docs.netapp.com/us-en/ontap/
