updated project yml

--- a/project.yml
+++ b/project.yml
@@ -47,7 +47,7 @@ sidebar:
       - section: networking
     - title: ONTAP docs
       url: https://docs.netapp.com/us-en/ontap/
-    - title: Legal Notices
+    - title: Legal notices
       url: /reference_legal_notices.html
 
 
