fixed Multiple lead paragraphs and legal notice issue

--- a/project.yml
+++ b/project.yml
@@ -48,7 +48,7 @@ sidebar:
     - title: ONTAP docs
       url: https://docs.netapp.com/us-en/ontap/
     - title: Legal notices
-      url: /reference_legal_notices.html
+      url: /legal-notices.html
 
 
 product-family: 
